--- a/static/style.css
+++ b/static/style.css
@@ -54,18 +54,23 @@ h1 {
     padding-top: 15vh;
 }
 
-.top-sotw {
-    background-image: linear-gradient(to bottom, rgb(11, 142, 250) , rgb(46, 46, 46));
+.top-heading-lurk {
+    padding-top: 400px;
 }
 
 .sotw-heading {
+    background-image: linear-gradient(to bottom, rgb(145, 145, 145), rgb(255, 255, 255));
+    font-family: "Optima", sans-serif;
     font-size: 80px;
-    padding-bottom: 75px;
+    padding-top: 55px;
+    padding-bottom: 60px;
+    color: rgb(53, 51, 51);
 }
 
 .grid-wrapper {
     display: grid;
     align-items: center;
+    background-image: linear-gradient(to bottom, rgb(255, 255, 255) , rgb(46, 46, 46));
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: 300px 300px 300px;
     grid-gap: 2rem;
@@ -96,4 +101,8 @@ h1 {
 .playlist-embed {
     padding: 10px;
     border-radius: 25px;
+}
+
+.bottom-sotw {
+    background-image: linear-gradient(to bottom, rgb(46, 46, 46), rgb(0, 0, 0));
 }
