--- a/templates/tracks.html
+++ b/templates/tracks.html
@@ -15,7 +15,7 @@
 
     <body>
 
-        <h1 class="sotw-heading"><center>TRACKS FOR THE WEEK</center></h1>
+        <h1 class="sotw-heading"><center>barzbarzbarz</center></h1>
 
         <div class="grid-wrapper">
             <div class="grid-item">
