--- a/static/style.css
+++ b/static/style.css
@@ -59,7 +59,7 @@ h1 {
 }
 
 .sotw-heading {
-    background-image: linear-gradient(to bottom, rgb(145, 145, 145), rgb(255, 255, 255));
+    background-image: linear-gradient(to bottom, rgb(56, 56, 56), rgb(255, 255, 255));
     font-family: "Optima", sans-serif;
     font-size: 80px;
     padding-top: 55px;
@@ -105,4 +105,5 @@ h1 {
 
 .bottom-sotw {
     background-image: linear-gradient(to bottom, rgb(46, 46, 46), rgb(0, 0, 0));
+    padding-bottom: 50px;
 }
