--- a/templates/tracks.html
+++ b/templates/tracks.html
@@ -15,7 +15,10 @@
 
     <body>
 
-        <h1 class="sotw-heading"><center>barzbarzbarz</center></h1>
+        <section class="headings">
+            <h1 class="sotw-heading"><center>barz barz barz</center></h1>
+            <h3 class="sotw-subheading"><center>Tracks I'm Listening to this Week</center></h3>
+        </section>
 
         <div class="grid-wrapper">
             <div class="grid-item">
@@ -58,7 +61,7 @@
         </div>
 
         <section class="bottom-sotw">
-            <h1><center>30 On Repeat 🎵</center></h1>
+            <h1 style="font-size: 35px"><center>30 On Repeat 🎵</center></h1>
             <center>
                 <iframe class="playlist-embed" src="https://open.spotify.com/embed/playlist/37i9dQZF1EpihuajotStbz?utm_source=generator&theme=0" width="50%" height="500" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
             </center>
