Meta Tags Update

--- a/templates/tracks.html
+++ b/templates/tracks.html
@@ -7,9 +7,9 @@
         <title>ZuhairHK</title>
         <link rel="stylesheet" href="static/style.css">
         <meta property="og:type" content="website">
-        <meta property="og:title" content="website title" />
-        <meta property="og:description" content="website description" />
-        <meta property="og:url" content="http://127.0.0.1:5000/sotw" />
+        <meta property="og:title" content="Zu's Tracks" />
+        <meta property="og:description" content="Tracks ya boi currently vibin w" />
+        <meta property="og:url" content="https://zuhairhk.herokuapp.com/tracks" />
         <!-- <meta property="og:image" content="full thumbnail path" /> -->
     </head>
 
