--- a/templates/tracks.html
+++ b/templates/tracks.html
@@ -46,8 +46,8 @@
                 <center><p>CARTI GOAT 🐐</p></center>
             </div>
             <div class="grid-item">
-                <iframe class="spotify-embed" src="https://open.spotify.com/embed/track/4bYLspjdlNAV19Ej8bnwzo?utm_source=generator" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
-                <center><p>CANCUN 🥥</p></center>
+                <iframe class="spotify-embed" src="https://open.spotify.com/embed/track/1EjxJHY9A6LMOlvyZdwDly?utm_source=generator" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+                <center><p>TUM MILE 🗣🔊</p></center>
             </div> 
             <div class="grid-item">
                 <iframe class="spotify-embed" src="https://open.spotify.com/embed/track/1atTwWcqvhu5OEzRBlOXC4?utm_source=generator" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
