--- a/templates/tracks.html
+++ b/templates/tracks.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="static/style.css">
         <meta property="og:type" content="website">
         <meta property="og:title" content="Zu's Tracks" />
-        <meta property="og:description" content="Tracks ya boi currently vibin w" />
+        <meta property="og:description" content="My weekly soundtrack" />
         <meta property="og:url" content="https://zuhairhk.herokuapp.com/tracks" />
         <!-- <meta property="og:image" content="full thumbnail path" /> -->
     </head>
@@ -31,7 +31,7 @@
             </div>
             <div class="grid-item">
                 <iframe class="spotify-embed" src="https://open.spotify.com/embed/track/4bgXEwLBvgVywxVlfaEpEm?utm_source=generator" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
-                <center><p>WHY MY ROOF LOOK LIKE A T-REX DONE BIT IT</p></center>
+                <center><p>WHYMYROOFLOOKLIKEATREXDUNEBITIT</p></center>
             </div>
             <div class="grid-item">
                 <iframe class="spotify-embed" src="https://open.spotify.com/embed/track/4R67rQNSbbsR4TdUVOIdez?utm_source=generator" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
