--- a/static/style.css
+++ b/static/style.css
@@ -8,19 +8,35 @@ body {
     background-color: rgb(46, 46, 46);
 }
 
+.top-div {
+    position: relative;
+}
+
 .top-banner {
-    background-image: url(https://cdna.artstation.com/p/assets/images/images/007/141/492/large/jonathan-lucero-sunset-corvette-close.jpg?1503991892);
-    min-height: 100vh;
-    background-attachment: fixed;
+    /* background-image: url(https://cdna.artstation.com/p/assets/images/images/007/141/492/large/jonathan-lucero-sunset-corvette-close.jpg?1503991892); */
+    /* background-attachment: fixed;
     background-position: center;
     background-size: cover;
-    background-repeat: no-repeat;
+    background-repeat: no-repeat; */
+    max-width: 100%;
+    max-height: 100%;
+    display: block;
+}
+
+.t1 {
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center; /** Y-axis align **/
+    justify-content: center; /** X-axis align **/
 }
 
 .dp {
     padding: 20px;
     border-radius: 350px;
-    width: 45vh;
+    width: 27vh;
 }
 
 h1 {
