--- a/templates/index.html
+++ b/templates/index.html
@@ -8,11 +8,14 @@
 </head>
 
 <body>
-    <div class="top-banner"></div>
+    <div class="top-div">
+        <h1 class="t1">Text</h1>
+        <img class="top-banner" src="static/setupupdate9.jpg">
+    </div>
 
     <section class="main-section">
         <h1 class="top-heading"><center>HELLO</center></h1>
-        <center><img class="dp" src="static/mob_2.jpg" alt="Display Pic"></center>
+        <center><img class="dp" src="static/me_pic.jpg" alt="Display Pic"></center>
         <h3><center>PLACE HOLDER TEXT MY NAME ZUHIAR YESSZIRRR</center></h3>
         <div class="top-space"></div>
         <center>
@@ -26,7 +29,7 @@
             </a>
             <div class="space-between"></div>
 
-            <a href="/sotw"> <!--target="_blank">-->
+            <a href="/tracks"> <!--target="_blank">-->
                 <button class="main-buttons" type="button">Music</button>
             </a>
         </center>
