--- a/templates/tracks.html
+++ b/templates/tracks.html
@@ -22,6 +22,10 @@
 
         <div class="grid-wrapper">
             <div class="grid-item">
+                <iframe class="spotify-embed" src="https://open.spotify.com/embed/track/5CM4UuQ9Gnd6K2YyKGPMoK?utm_source=generator" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+                <center><p>I WISH I KNEWW</p></center>
+            </div>
+            <div class="grid-item">
                 <iframe class="spotify-embed" src="https://open.spotify.com/embed/track/3F5CgOj3wFlRv51JsHbxhe?utm_source=generator" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
                 <center><p>⛽💯</p></center>
             </div>
@@ -30,12 +34,8 @@
                 <center><p>BB Sweep</p></center>
             </div>
             <div class="grid-item">
-                <iframe class="spotify-embed" src="https://open.spotify.com/embed/track/4bgXEwLBvgVywxVlfaEpEm?utm_source=generator" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
-                <center><p>WHYMYROOFLOOKLIKEATREXDUNEBITIT</p></center>
-            </div>
-            <div class="grid-item">
-                <iframe class="spotify-embed" src="https://open.spotify.com/embed/track/4R67rQNSbbsR4TdUVOIdez?utm_source=generator" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
-                <center><p>swing aux</p></center>
+                <iframe class="spotify-embed" src="https://open.spotify.com/embed/track/56olc7bzMwsNBXLJPBcWSA?utm_source=generator" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+                <center><p>😴🛌</p></center>
             </div>
             <div class="grid-item">
                 <iframe class="spotify-embed" src="https://open.spotify.com/embed/track/06mXSNndoxDKhzwFqt1GP6?utm_source=generator" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
