--- a/templates/tracks.html
+++ b/templates/tracks.html
@@ -34,8 +34,8 @@
                 <center><p>BB Sweep</p></center>
             </div>
             <div class="grid-item">
-                <iframe class="spotify-embed" src="https://open.spotify.com/embed/track/56olc7bzMwsNBXLJPBcWSA?utm_source=generator" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
-                <center><p>😴🛌</p></center>
+                <iframe class="spotify-embed" src="https://open.spotify.com/embed/track/7yNf9YjeO5JXUE3JEBgnYc?utm_source=generator" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+                <center><p>waitin on calls</p></center>
             </div>
             <div class="grid-item">
                 <iframe class="spotify-embed" src="https://open.spotify.com/embed/track/1gH1h30wkQdd9zhY3j7a8T?utm_source=generator" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
@@ -54,8 +54,8 @@
                 <center><p>🏃‍♂️💨</p></center>
             </div>
             <div class="grid-item">
-                <iframe class="spotify-embed" src="https://open.spotify.com/embed/track/6akffeWlG2JB4u8AOJ4WRo?utm_source=generator" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
-                <center><p>all out of words</p></center>
+                <iframe class="spotify-embed" src="https://open.spotify.com/embed/track/1dSp8A0PDSvRZXAsuuoge7?utm_source=generator" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+                <center><p>NEVER NEED A HELPING HAND</p></center>
             </div>
 
         </div>
