--- a/templates/tracks.html
+++ b/templates/tracks.html
@@ -22,40 +22,40 @@
 
         <div class="grid-wrapper">
             <div class="grid-item">
-                <iframe class="spotify-embed" src="https://open.spotify.com/embed/track/5CM4UuQ9Gnd6K2YyKGPMoK?utm_source=generator" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
-                <center><p>I WISH I KNEWW</p></center>
+                <iframe class="spotify-embed" src="https://open.spotify.com/embed/track/6C4Kqx1EFnM9h07SJxM26j?utm_source=generator" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+                <center><p>OSAP come thru pleze</p></center>
             </div>
             <div class="grid-item">
                 <iframe class="spotify-embed" src="https://open.spotify.com/embed/track/3F5CgOj3wFlRv51JsHbxhe?utm_source=generator" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
                 <center><p>⛽💯</p></center>
             </div>
             <div class="grid-item">
-                <iframe class="spotify-embed" src="https://open.spotify.com/embed/track/6hlrui656yBRUb3qGkd5lH?utm_source=generator" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
-                <center><p>BB Sweep</p></center>
+                <iframe class="spotify-embed" src="https://open.spotify.com/embed/track/2uuJs2nltcYFh9pkKP7bW4?utm_source=generator" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+                <center><p>🤒</p></center>
             </div>
             <div class="grid-item">
                 <iframe class="spotify-embed" src="https://open.spotify.com/embed/track/7yNf9YjeO5JXUE3JEBgnYc?utm_source=generator" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
                 <center><p>waitin on calls</p></center>
             </div>
             <div class="grid-item">
-                <iframe class="spotify-embed" src="https://open.spotify.com/embed/track/1gH1h30wkQdd9zhY3j7a8T?utm_source=generator" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
-                <center><p>🍊</p></center>
+                <iframe class="spotify-embed" src="https://open.spotify.com/embed/track/5CM4UuQ9Gnd6K2YyKGPMoK?utm_source=generator" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+                <center><p>I WISH I KNEWW</p></center>
             </div>
             <div class="grid-item">
                 <iframe class="spotify-embed" src="https://open.spotify.com/embed/track/5MUxrNd7Gr2HksLcAlB0IO?utm_source=generator" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
                 <center><p>CARTI GOAT 🐐</p></center>
             </div>
             <div class="grid-item">
-                <iframe class="spotify-embed" src="https://open.spotify.com/embed/track/1EjxJHY9A6LMOlvyZdwDly?utm_source=generator" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
-                <center><p>TUM MILE 🗣🔊</p></center>
-            </div> 
+                <iframe class="spotify-embed" src="https://open.spotify.com/embed/track/0dLbrlAVPPjpPqnYfmJsWk?utm_source=generator" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+                <center><p>literally me 🗣🔊</p></center>
+            </div>
             <div class="grid-item">
-                <iframe class="spotify-embed" src="https://open.spotify.com/embed/track/1atTwWcqvhu5OEzRBlOXC4?utm_source=generator" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+                <iframe class="spotify-embed" src="https://open.spotify.com/embed/track/2QpGZOhTCHHiKmpSO9FW4h?utm_source=generator" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
                 <center><p>🏃‍♂️💨</p></center>
             </div>
             <div class="grid-item">
-                <iframe class="spotify-embed" src="https://open.spotify.com/embed/track/1dSp8A0PDSvRZXAsuuoge7?utm_source=generator" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
-                <center><p>NEVER NEED A HELPING HAND</p></center>
+                <iframe class="spotify-embed" src="https://open.spotify.com/embed/track/7nzsY8vlnKdvGOEE0rjAXZ?utm_source=generator" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+                <center><p>🤘🤘🤘</p></center>
             </div>
 
         </div>
