--- a/templates/tracks.html
+++ b/templates/tracks.html
@@ -22,24 +22,24 @@
 
         <div class="grid-wrapper">
             <div class="grid-item">
-                <iframe class="spotify-embed" src="https://open.spotify.com/embed/track/6C4Kqx1EFnM9h07SJxM26j?utm_source=generator" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
-                <center><p>OSAP come thru pleze</p></center>
+                <iframe class="spotify-embed" src="https://open.spotify.com/embed/track/3azJifCSqg9fRij2yKIbWz?utm_source=generator" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+                <center><p>SPEEDINCARGOIN90INTHERAIN</p></center>
             </div>
             <div class="grid-item">
-                <iframe class="spotify-embed" src="https://open.spotify.com/embed/track/3F5CgOj3wFlRv51JsHbxhe?utm_source=generator" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
-                <center><p>⛽💯</p></center>
+                <iframe class="spotify-embed" src="https://open.spotify.com/embed/track/5EV4bGHxVN0kHpcAFvgnTt?utm_source=generator" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+                <center><p>TTC line 2</p></center>
             </div>
             <div class="grid-item">
-                <iframe class="spotify-embed" src="https://open.spotify.com/embed/track/2uuJs2nltcYFh9pkKP7bW4?utm_source=generator" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
-                <center><p>🤒</p></center>
+                <iframe class="spotify-embed" src="https://open.spotify.com/embed/track/30AnNG3dFbHLQuSbIVWEbF?utm_source=generator" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+                <center><p>🤧</p></center>
             </div>
             <div class="grid-item">
-                <iframe class="spotify-embed" src="https://open.spotify.com/embed/track/7yNf9YjeO5JXUE3JEBgnYc?utm_source=generator" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
-                <center><p>waitin on calls</p></center>
+                <iframe class="spotify-embed" src="https://open.spotify.com/embed/track/3gJDgenxLephg09x86IxPs?utm_source=generator" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+                <center><p>CANTTAKEITNOMORE ‼</p></center>
             </div>
             <div class="grid-item">
-                <iframe class="spotify-embed" src="https://open.spotify.com/embed/track/5CM4UuQ9Gnd6K2YyKGPMoK?utm_source=generator" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
-                <center><p>I WISH I KNEWW</p></center>
+                <iframe class="spotify-embed" src="https://open.spotify.com/embed/track/57lBDEtlUhzU18Co0DToLg?utm_source=generator" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+                <center><p>operational amplifiers !</p></center>
             </div>
             <div class="grid-item">
                 <iframe class="spotify-embed" src="https://open.spotify.com/embed/track/5MUxrNd7Gr2HksLcAlB0IO?utm_source=generator" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
@@ -54,8 +54,8 @@
                 <center><p>🏃‍♂️💨</p></center>
             </div>
             <div class="grid-item">
-                <iframe class="spotify-embed" src="https://open.spotify.com/embed/track/7nzsY8vlnKdvGOEE0rjAXZ?utm_source=generator" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
-                <center><p>🤘🤘🤘</p></center>
+                <iframe class="spotify-embed" src="https://open.spotify.com/embed/track/0JiHzIVQTBt4MtC7SW90xu?utm_source=generator" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+                <center><p>tre flip 🛹</p></center>
             </div>
 
         </div>
