--- a/templates/paging.html
+++ b/templates/paging.html
@@ -11,6 +11,8 @@
     <div class="top-banner"></div>
 
     <section class="main-section">
+        <div class="top-space"></div>
+        <div class="top-space"></div>
         <h1 class="top-heading-lurk"><center>why are you lurking...</center></h1>
     </section>
     
