--- a/templates/rimi.html
+++ b/templates/rimi.html
@@ -1,8 +1,8 @@
 <style>
     .container {
-      height: 200px;
+      height: 800px;
       position: relative;
-      border: 3px solid green;
+      border: 3px solid rgb(255, 255, 255);
     }
     
     .vertical-center {
@@ -16,6 +16,6 @@
     
     <div class="container">
       <div class="vertical-center">
-        <p>I love you so much (message change test) 😋</p>
+        <center><p>I love you so much (message change test) 😋</p></center>
       </div>
     </div>
