--- a/templates/rimi.html
+++ b/templates/rimi.html
@@ -2,7 +2,7 @@
     .container {
       height: 800px;
       position: relative;
-      border: 3px solid rgb(255, 255, 255);
+      border: 3px solid rgb(214, 55, 55);
     }
     
     .vertical-center {
@@ -15,7 +15,10 @@
     </style>
     
     <div class="container">
+      <center>
       <div class="vertical-center">
-        <center><p>I love you so much (message change test) 😋</p></center>
+        <p>(message test)</p>
       </div>
+    </center>
     </div>
+
