--- a/templates/tracks.html
+++ b/templates/tracks.html
@@ -22,24 +22,24 @@
 
         <div class="grid-wrapper">
             <div class="grid-item">
-                <iframe class="spotify-embed" src="https://open.spotify.com/embed/track/4RGWHfQeJftd5XrP8JUgFj?utm_source=generator" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
-                <center><p>call me when the world looks bleak</p></center>
+                <iframe class="spotify-embed" src="https://open.spotify.com/embed/track/2KLwPaRDOB87XOYAT2fgxh?utm_source=generator" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+                <center><p>pufpuff</p></center>
             </div>
             <div class="grid-item">
                 <iframe class="spotify-embed" src="https://open.spotify.com/embed/track/4gKWtJGlhxKKSyV65llt2G?utm_source=generator" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
                 <center><p>zoomin 💨</p></center>
             </div>
             <div class="grid-item">
-                <iframe class="spotify-embed" src="https://open.spotify.com/embed/track/0bIHWAGW7gahdRc4JP2Eup?utm_source=generator" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
-                <center><p>shoutout ryeEng25 fo this ‼️</p></center>
+                <iframe class="spotify-embed" src="https://open.spotify.com/embed/track/26hOm7dTtBi0TdpDGl141t?utm_source=generator" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+                <center><p>no point in turning off the lights </p></center>
             </div>
             <div class="grid-item">
-                <iframe class="spotify-embed" src="https://open.spotify.com/embed/track/3gJDgenxLephg09x86IxPs?utm_source=generator" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
-                <center><p>CANTTAKEITNOMORE ‼</p></center>
+                <iframe class="spotify-embed" src="https://open.spotify.com/embed/track/5sFIYKbII6QzRT57hCza5Z?utm_source=generator" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+                <center><p>it's just a phase...</p></center>
             </div>
             <div class="grid-item">
-                <iframe class="spotify-embed" src="https://open.spotify.com/embed/track/74loibzxXRL875X20kenvk?utm_source=generator" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
-                <center><p>👼👼👼👼</p></center>
+                <iframe class="spotify-embed" src="https://open.spotify.com/embed/track/754hhnczVNu3ibRaoAcujX?utm_source=generator" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+                <center><p>🪜🪜</p></center>
             </div>
             <div class="grid-item">
                 <iframe class="spotify-embed" src="https://open.spotify.com/embed/track/5MUxrNd7Gr2HksLcAlB0IO?utm_source=generator" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
@@ -50,11 +50,11 @@
                 <center><p>🗣🔊</p></center>
             </div>
             <div class="grid-item">
-                <iframe class="spotify-embed" src="https://open.spotify.com/embed/track/6XO8RlYuJCiI0v3IA48FeJ?utm_source=generator" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+                <iframe class="spotify-embed" src="https://open.spotify.com/embed/track/3y3NwQPQAjKCunRz2eKggA?utm_source=generator" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
                 <center><p>🪨</p></center>
             </div>
             <div class="grid-item">
-                <iframe class="spotify-embed" src="https://open.spotify.com/embed/track/0JiHzIVQTBt4MtC7SW90xu?utm_source=generator" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+                <iframe class="spotify-embed" src="https://open.spotify.com/embed/track/5Dz1lxtIg3Z9Nnm7Mnk5b5?utm_source=generator" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
                 <center><p>tre flip 🛹</p></center>
             </div>
 
