--- a/templates/rimi.html
+++ b/templates/rimi.html
@@ -1,24 +1,28 @@
-<style>
-    .container {
-      height: 800px;
-      position: relative;
-      border: 3px solid rgb(214, 55, 55);
-    }
-    
-    .vertical-center {
-      margin: 0;
-      position: absolute;
-      top: 50%;
-      -ms-transform: translateY(-50%);
-      transform: translateY(-50%);
-    }
-    </style>
-    
-    <div class="container">
-      <center>
-      <div class="vertical-center">
-        <p>(message test)</p>
-      </div>
-    </center>
-    </div>
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+    <meta charset="utf-8">
+    <title>ZuhairHK</title>
+</head>
+
+<body style="background-color: rgb(56, 58, 59); color: white; margin: auto; width: 50%; padding: 100px;">
+  <!--background-image: url('https://www.freevector.com/uploads/vector/preview/30514/Cars-Cliparts.jpg');-->
+  <div>
+    <h1>
+      Seriously need to fix this... 😞 😞 😞 <br><br>
+        Cars<br>
+        Orange<br>
+        Abbel<br>
+        Donut<br>
+        Rimoji...<br>
+        Octopus... ?<br>
+        10 94 😭<br>
+        Rimi Carrots<br>
+        Squimched...<br>
+        Food shack 😭<br>
+        #TOOMUCHSWAG<br>
+    </h1>
+    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/1EjxJHY9A6LMOlvyZdwDly?utm_source=generator&theme=0" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+  </div>
+</body>
