--- a/templates/tracks.html
+++ b/templates/tracks.html
@@ -26,16 +26,16 @@
                 <center><p>pufpuff</p></center>
             </div>
             <div class="grid-item">
-                <iframe class="spotify-embed" src="https://open.spotify.com/embed/track/4gKWtJGlhxKKSyV65llt2G?utm_source=generator" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
-                <center><p>zoomin 💨</p></center>
+                <iframe class="spotify-embed" src="https://open.spotify.com/embed/track/4M6pDt6pICsMiiwXGkufLe?utm_source=generator" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+                <center><p>☁️🌫️🌪️</p></center>
             </div>
             <div class="grid-item">
                 <iframe class="spotify-embed" src="https://open.spotify.com/embed/track/26hOm7dTtBi0TdpDGl141t?utm_source=generator" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
                 <center><p>no point in turning off the lights </p></center>
             </div>
             <div class="grid-item">
-                <iframe class="spotify-embed" src="https://open.spotify.com/embed/track/5sFIYKbII6QzRT57hCza5Z?utm_source=generator" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
-                <center><p>it's just a phase...</p></center>
+                <iframe class="spotify-embed" src="https://open.spotify.com/embed/track/4gKWtJGlhxKKSyV65llt2G?utm_source=generator" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+                <center><p>zoomin 💨</p></center>
             </div>
             <div class="grid-item">
                 <iframe class="spotify-embed" src="https://open.spotify.com/embed/track/754hhnczVNu3ibRaoAcujX?utm_source=generator" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
